@@ -1,3 +1,8 @@
+2006-07-12  Jason Merrill  <jason@redhat.com>
+
+	PR c++/28217
+	* semantics.c (note_decl_for_pch): Don't premangle templates.
+
 2006-07-12  Martin Michlmayr  <tbm@cyrius.com>
 
 	* typeck.c (string_conv_p): Remove spurious quotation mark in
